--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                             <div class="form-group">
                                 <label class="label-control col-xs-5 col-sm-5 col-md-5 col-lg-5">re-password</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="Password" id="txtpass2" onblur="testepass()" class="form-control" placeholder="*********"><span
+                                    <input type="Password" id="txtpass2" onblur="testrepass()" class="form-control" placeholder="*********"><span
                                         id="er3">*</span>
                                 </div>
                             </div>
@@ -889,7 +889,7 @@
                             <div class="form-group">
                                 <label class="label-control col-xs-12 col-sm-12 col-md-12 col-lg-12">User name or Email</label>
                                 <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-                                    <input type="text" id="txtname" placeholder="Enter Username" class="form-control">
+                                    <input type="text" id="txtname" placeholder="Username or email" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
